--- a/src/dune
+++ b/src/dune
@@ -1,6 +1,6 @@
 (library
   (name elon)
-  (libraries sedlex menhirLib containers containers-data uuseg.string)
+  (libraries sedlex menhirLib containers containers-data uuseg.string logs)
   (preprocess
     (pps sedlex.ppx ppx_deriving.show))
   (flags (:standard -warn-error -A)))
